--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,5 +1,5 @@
 # Sync files from dev1 repository to stage repository with renaming
-trigun14/stage1:
+trigun14/stage1@main:
   - source: README.md
     dest: README.md
   - source: dev-ai-gateway-values.yaml
