--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -16,3 +16,4 @@ jobs:
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
           GH_PAT: ${{ secrets.PAT_TOKEN }}  # Ensure the secret is set with your Personal Access Token
+          SKIP_PR: true 
