--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -6,6 +6,9 @@ group:
       dest: stage-README.md
     - source: dev-ai-gateway-values.yaml
       dest: stage-ai-gateway-values.yaml
+      template:
+      image:
+        tag: 'new-dynamic-tag-value'
     - source: dev-api-env-values.yaml
       dest: stage-api-env-values.yaml
     - source: dev-budget-checker-values.yaml
