--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -3,12 +3,12 @@ group:
     trigun14/stage1@main
   files:
     - source: README.md
-      dest: stage-README.md
+      dest: README.md
     - source: dev-ai-gateway-values.yaml
       dest: stage-ai-gateway-values.yaml
       template:
       image:
-        tag: 'new-dynamic-tag-value'
+        tag: '*'
     - source: dev-api-env-values.yaml
       dest: stage-api-env-values.yaml
     - source: dev-budget-checker-values.yaml
